--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,6 +18,7 @@ jobs:
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -DWITH_BOOST_TEST=ON
       - run: cmake --build .
 #       - run: cmake --build . --target test
+#      - run: cmake --build . --target package
       - run: cmake --build . --target package
       - name: Create Release
         id: create_release
