Добавила простенькое интегрирование и карты

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 
+# ПОДКЛЮЧАЕМ MARBLE ++++++++++++++++++++++++++++++++++++++++++
+# указываем в нашем проекте где лежат дополнительные .cmake файлы
+LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${PROJECT_SOURCE_DIR}/import/cmake")
+
+# ПОДКЛЮЧАЕМ MARBLE ++++++++++++++++++++++++++++++++++++++++++
+
+MESSAGE("==============================")
+MESSAGE("AAAAAAAAAAAAAAAA ")
+
+
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
@@ -21,7 +31,15 @@ set(PROJECT_SOURCES
         mainwindow.ui
         stateVectorModel.h stateVectorModel.cpp
         mathModelSpacecraft.h mathModelSpacecraft.cpp
+        MapMarbleTrassa.h MapMarbleTrassa.cpp
+        coordinateVectors.h coordinateVectors.cpp
+        definitions.h
+        xyz2blh.h xyz2blh.cpp
+        TMicsellFunction.h TMicsellFunction.cpp
 )
+
+message("PROJECT_SOURCES")
+
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(matModelKA
@@ -47,6 +65,19 @@ else()
 endif()
 
 target_link_libraries(matModelKA PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+
+# после того, какпрописану все свойства, прописываем
+target_include_directories(matModelKA PRIVATE "/home/mary/3rd_party/marble-product/include/marble")
+
+target_link_libraries(matModelKA PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
+    "/home/mary/3rd_party/marble-product/lib/libastro.so"
+    "/home/mary/3rd_party/marble-product/lib/libastro.so.1"
+    "/home/mary/3rd_party/marble-product/lib/libastro.so.23.3.70"
+    "/home/mary/3rd_party/marble-product/lib/libmarbledeclarative.so"
+    "/home/mary/3rd_party/marble-product/lib/libmarblewidget-qt5.so"
+    "/home/mary/3rd_party/marble-product/lib/libmarblewidget-qt5.so.23.3.70"
+    "/home/mary/3rd_party/marble-product/lib/libmarblewidget-qt5.so.28")
+
 
 set_target_properties(matModelKA PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
